--- a/start.html
+++ b/start.html
@@ -14,14 +14,16 @@
 <p>Älskar du att quizza och utmana dig själv och dina vänner? Saknar du ofta ett detaljerat svar? Då har du kommit till rätt ställe.... </p>
 <p>Välj din favorit:</p>
 		<ul>
-			<li>Geografi</li>
-			<li>Historia</li>
-			<li>Film</li>
-			<li>Littratur</li>
-			<li>Natur</li>
-			<li>Musik</li>
-			<li>Sport och fritid</li>
-			<li>Teknologi</li>
+
+		<li><a class="button" href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/quiz.html">Geografi</a></li>
+		<li><a class="button" href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/quiz.html">Historia</a></li>
+		<li><a class="button" href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/quiz.html">Film</a></li>
+		<li><a class="button" href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/quiz.html">Litteratur</a></li>
+		<li><a class="button" href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/quiz.html">Natur</a></li>
+		<li><a class="button" href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/quiz.html">Musik</a></li>
+		<li><a class="button" href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/quiz.html">Sport och fritid</a></li>
+		<li><a class="button" href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/quiz.html">Teknologi</a></li>
+
 		</ul>
 
 <button type="button" class="btn btn-default navbar-btn">Sign in</button>
