--- a/quiz.html
+++ b/quiz.html
@@ -11,6 +11,11 @@
 
 <body>
 
+<h1>Geografiquiz</h1>
+<p>Denna kategori innehåller frågor och svar om geografi. Frågor om länder, städer, berg, hav, sjöar och mycket mer.
+</p>
+<button type="submit">Starta quiz</button>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
