--- a/start.html
+++ b/start.html
@@ -12,7 +12,7 @@
 <body>
 <h1>Frågesport!</h1>
 <p>Älskar du att quizza och utmana dig själv och dina vänner? Saknar du ofta ett detaljerat svar? Då har du kommit till rätt ställe.... </p>
-<p>Välj din favorit:</p>
+<p>Välj ditt favoritämne:</p>
 		<ul>
 
 		<li><a class="button" href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/quiz.html">Geografi</a></li>
@@ -25,8 +25,6 @@
 		<li><a class="button" href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/quiz.html">Teknologi</a></li>
 
 		</ul>
-
-<button type="button" class="btn btn-default navbar-btn">Sign in</button>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
