--- a/quiz.html
+++ b/quiz.html
@@ -14,7 +14,7 @@
 <h1>Geografiquiz</h1>
 <p>Denna kategori innehåller frågor och svar om geografi. Frågor om länder, städer, berg, hav, sjöar och mycket mer.
 </p>
-<button type="submit">Starta quiz</button>
+<a href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/question.html"><button type="submit">Starta quiz</button></a>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
