--- a/question.html
+++ b/question.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+<h1>Fråga 1.</h1>
+<p>I vilket land ligger staden Antwerpen?</p>
+
+<button type="button" class="btn btn-primary">Luxenburg</button>
+<button type="button" class="btn btn-success">Schweiz</button>
+<button type="button" class="btn btn-info">Belgien</button>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
