--- a/question.html
+++ b/question.html
@@ -15,7 +15,7 @@
 
 <button type="button" class="btn btn-primary">Luxenburg</button>
 <button type="button" class="btn btn-success">Schweiz</button>
-<button type="button" class="btn btn-info">Belgien</button>
+<a href="file:///Users/sofiag/Documents/tjejerkodar/quiz-templates/results.html"><button type="button" class="btn btn-info">Belgien</button></a>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
