--- a/start.html
+++ b/start.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Comatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, intial-scale=1">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="style.css" rel="stylesheet">
+	<link rel="stylesheet" href="/static/style.css">
 </head>
 
 <body>
