--- a/start.html
+++ b/start.html
@@ -29,5 +29,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
+{% for quiz in quizzes %}
+	<p>{{ quiz.name }}</p>
+{% endfor %}
+
+
 </body>
 </html>
